# GDE2Acsv

./: .gitignore  Dockerfile  GDE2Acsv.spec  README.txt  devInstructions.txt  pyproject.toml  requirements.txt  setup.py
config/: logging.conf
config/mappings/: myedbc_mapping.yaml  sd48myedbc_mapping.yaml  sd74myedbc_mapping.yaml
data/output/: .gitignore
src/: main.py
src/etl/: extractor.py  loader.py  transformer.py
src/utils/: helpers.py  logger.py
